# lmms

./: CMakeLists.txt
cmake/modules/: PluginList.cmake
plugins/Waver/: CMakeLists.txt  README.txt  Waver.cpp  Waver.h  WaverWidgetView.cpp  WaverWidgetView.h
plugins/Waver/qml/: WaverButton.qml  WaverExample.qml  WaverText.qml  WaverTheme.qml  WaverView.qml
